--- a/difocus2/scss/style.scss
+++ b/difocus2/scss/style.scss
@@ -14,9 +14,7 @@ body {
 
 .box-container {
   width: 540px;
-  padding-top: 35px;
-  padding-left: 50px;
-  padding-right: 50px;
+  padding: 35px 50px;
   margin: 15px auto;
   background-color: #ffffff;
   border: 2px solid #f0f0f0;
@@ -56,7 +54,6 @@ body {
     cursor: pointer;
     position: relative;
     margin-left: 65px;
-    margin-bottom: 50px;
     order: 3;
 
     &::before {
@@ -90,7 +87,7 @@ body {
     background: url(../icon_heart.svg) no-repeat;
     background-position: center;
     background-size: 30px;
-    height: 72px;
+    // height: 72px;
     width: 7%;
     outline: none;
     border: none;
@@ -98,6 +95,38 @@ body {
     margin-left: 15px;
     order: 4;
   }
+}
 
+@media screen and (max-width: 560px) {
+  .box-container {
+    width: 100%;
+    padding: 20px;
+    .title {
+      margin-bottom: 10px;
+      font-size: 20px;
+    }
+    .price {
+      width: 100%;
+      font-size: 20px;
+      span {
+        font-size: 16px;
+      }
+    }
+    .btn {
+      width: 160px;
+      height: 50px;
+      margin: 10px 0;
+      &::before {
+      background-size: 20px;
+      font-size: 18px;
+      line-height: 1;
+      padding-left: 35px;
+      }
+    }
+    .favorite {
+      width: 14%;
+      margin: 10px 1% ;
 
+    }
+  }
 }
