--- a/difocus3/css/style.css
+++ b/difocus3/css/style.css
@@ -1,5 +1,13 @@
+body {
+  margin: 0;
+  padding: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
 .slides {
   cursor: pointer;
+  background: #2e2e2e;
   width: 100%;
 }
 
@@ -9,9 +17,11 @@
      -moz-user-select: none;
       -ms-user-select: none;
           user-select: none;
-  width: auto;
+  width: 100%;
   height: 100vh;
-  margin: 50px auto;
+  margin: 0 auto;
+  -o-object-fit: contain;
+     object-fit: contain;
 }
 
 .slides img.active {
