--- a/difocus3/scss/style.scss
+++ b/difocus3/scss/style.scss
@@ -1,11 +1,19 @@
+body {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 .slides {
   cursor: pointer;
+  background: rgb(46, 46, 46);
   img {
     display: none;
     user-select: none;
-    width: auto;
+    width: 100%;
     height: 100vh;
-    margin: 50px auto;
+    margin: 0 auto;
+    object-fit: contain;
     &.active {
       display: block;
     }
